# api_essentials

./: .gitignore  README.md  __init__.py  example.py  factory_example.py  main.py  pyproject.toml  setup.py
api_essentials/: __init__.py  api.py  client.py  constants.py  factory.py  flags.py  logging_decorator.py  response.py  strategies.py  utils.py
api_essentials/auth/: __init__.py  authorization_code.py  client_credentials.py  config.py  constants.py  exceptions.py  factory.py  flow.py  grant_type.py  info.py  oauth2.py  oauth_base.py  other.py  password.py  token.py
api_essentials/client/: __init__.py  options.py
api_essentials/endpoint/: __init__.py  definition.py  factory.py  request_builder.py  spec.py
api_essentials/parameter/: __init__.py  _applier.py  _constraint.py  _core.py  _definition.py  _enums.py  _factory.py  _spec.py
api_essentials/request/: __init__.py  request_id.py
api_essentials/spec_factory/: __init__.py
api_essentials/strategy/: interface.py
api_essentials/tests/: __init__.py  auth_flow.py  auth_info.py
api_essentials/utils/: __init__.py  log.py
auth/: config.py  exceptions.py  oauth2.py  token.py
examples/: main.py
src/: api.py  logging_decorator.py  response.py  strategies.py
src/auth/: __init__.py  flow.py  info.py
src/client/: __init__.py  options.py  types.py
src/endpoint/: __init__.py  definition.py  request_builder.py  rules.py  spec.py
src/parameter/: __init__.py  _applier.py  _constraint.py  (+4 more)
strategy/: interface.py
tests/: __init__.py  auth_flow.py  auth_info.py  test_oauth2.py  test_request_id.py
(+10 files in other folders)
