[tool.poetry]
name = "api-essentials"
version = "0.1.0"
description = "A collection of essentials for various API functionalities."

[tool.poetry.dependencies]
httpx = "1.0.0b0"

[build-system]
requires = ["poetry-core==1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "7.0.0"
pytest-asyncio = "0.18.3"
pytest-cov = "4.0.0"
black = "22.3.0"
mypy = "0.910"
isort = "5.10.1"
flake8 = "4.0.1"
pydocstyle = "6.1.1"
bandit = "1.7.0"
pre-commit = "2.17.0"

[tool.bandit]
skips = ["B101"]
exclude = ["tests/*"]

[tool.mypy]
python_version = 3.11
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
strict = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
skip-string-normalization = false
